@@ -1,3 +1,10 @@
+Mon, 25 Feb 2008 15:51:16 +0100 <thp@perli.net>
+Show more description text in episode list
+
+	* src/gpodder/libpodcasts.py: Join all lines and strip unnecessary
+	data for the episode description that is displayed in the episode list
+	when descriptions are enabled (suggested by Jérôme Chabod)
+
 Mon, 25 Feb 2008 14:39:15 +0100 <thp@perli.net>
 Merge changes from 0.11.0 release after release
 
